don't listen to publishnotify and publishunnotify events.

--- a/red5-flash-client/allinone/src/allinone.mxml
+++ b/red5-flash-client/allinone/src/allinone.mxml
@@ -82,6 +82,8 @@
 						break;
 					case "NetStream.Play.Start":
 					case "NetStream.Play.Reset":
+					case "NetStream.Play.PublishNotify":
+					case "NetStream.Play.UnpublishNotify":
 					case "NetStream.Video.DimensionChange":
 						break;
 					default:
