when a connection fails, disconnect video

--- a/red5-flash-client/allinone/src/allinone.mxml
+++ b/red5-flash-client/allinone/src/allinone.mxml
@@ -87,7 +87,7 @@
 					case "NetStream.Video.DimensionChange":
 						break;
 					default:
-						Alert.show("Unknown event: " + event.info.code, "Information");
+						status.text = "Event: " + event.info.code, "Information";
 						break;
 				}
 			}
