added schedule in the app.

--- a/android-client/Vispar/res/layout/fragment_explore.xml
+++ b/android-client/Vispar/res/layout/fragment_explore.xml
@@ -6,12 +6,30 @@
     <TableRow
         android:id="@+id/tableRow1"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
+        android:layout_height="80dp" >
+        <RelativeLayout>
         <TextView
             android:id="@+id/textView1"
             android:layout_width="300dp"
-            android:layout_height="80dp"
+            android:layout_height="20dp"
             android:text="Debate: Pro-life vs. Pro-Choice" />
+        <TextView
+            android:id="@+id/textView1.1"
+            android:layout_width="300dp"
+            android:layout_height="20dp"
+            android:layout_below="@+id/textView1"
+            android:text="* John Rosenwald and Ann Arbor"
+            android:textAppearance="@style/BlueText" />
+
+        <TextView
+            android:id="@+id/textView1.2"
+            android:layout_width="300dp"
+            android:layout_height="20dp"
+            android:layout_below="@+id/textView1.1"
+            android:text="* April 10, 2015"
+            android:textAppearance="@style/RedText" />
+
+        </RelativeLayout>
 		<com.blundell.tut.LoaderImageView
 		   android:id="@+id/loaderImageView1"
 		   android:layout_width="180dp"
@@ -23,12 +41,30 @@
     <TableRow
         android:id="@+id/tableRow2"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
+        android:layout_height="80dp" >
+        <RelativeLayout>
         <TextView
             android:id="@+id/textView2"
             android:layout_width="300dp"
-            android:layout_height="80dp"
+            android:layout_height="20dp"
             android:text="Debate: Traditional Energy vs. Green-Energy" />
+        <TextView
+            android:id="@+id/textView2.1"
+            android:layout_width="300dp"
+            android:layout_height="20dp"
+            android:layout_below="@+id/textView2"
+            android:text="* Cook vs. Lows"
+            android:textAppearance="@style/BlueText" />
+
+        <TextView
+            android:id="@+id/textView2.2"
+            android:layout_width="300dp"
+            android:layout_height="20dp"
+            android:layout_below="@+id/textView2.1"
+            android:text="* Jan 8, 2015"
+            android:textAppearance="@style/RedText" />
+
+        </RelativeLayout>
 		<com.blundell.tut.LoaderImageView
 		   android:id="@+id/loaderImageView2"
 		   android:layout_width="180dp"
@@ -40,12 +76,31 @@
     <TableRow
         android:id="@+id/tableRow3"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
+        android:layout_height="80dp" >
+		
+        <RelativeLayout>
 		<TextView
             android:id="@+id/textView3"
             android:layout_width="300dp"
-            android:layout_height="80dp"
+            android:layout_height="20dp"
             android:text="Debate: Boxer vs. Brief" />
+		<TextView
+            android:id="@+id/textView3.1"
+            android:layout_width="300dp"
+            android:layout_height="20dp"
+            android:layout_below="@+id/textView3"
+            android:text="* Rhino Toastmasters"
+            android:textAppearance="@style/BlueText" />
+
+        <TextView
+            android:id="@+id/textView3.2"
+            android:layout_width="300dp"
+            android:layout_height="20dp"
+            android:layout_below="@+id/textView3.1"
+            android:text="* Sept 10, 2014"
+            android:textAppearance="@style/RedText" />
+
+        </RelativeLayout>
 		<com.blundell.tut.LoaderImageView
 		   android:id="@+id/loaderImageView3"
 		   android:layout_width="180dp"
@@ -57,12 +112,31 @@
     <TableRow
         android:id="@+id/tableRow4"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
+        android:layout_height="80dp" >
+		
+        <RelativeLayout>
 		<TextView
             android:id="@+id/textView4"
             android:layout_width="300dp"
-            android:layout_height="80dp"
+            android:layout_height="20dp"
             android:text="Dialog: Meet with TanYuanYuan" />
+		<TextView
+            android:id="@+id/textView4.1"
+            android:layout_width="300dp"
+            android:layout_height="20dp"
+            android:layout_below="@+id/textView4"
+            android:text="* Art Assoc."
+            android:textAppearance="@style/BlueText" />
+
+        <TextView
+            android:id="@+id/textView4.2"
+            android:layout_width="300dp"
+            android:layout_height="20dp"
+            android:layout_below="@+id/textView4.1"
+            android:text="* June 8, 2014"
+            android:textAppearance="@style/RedText" />
+
+        </RelativeLayout>
 		<com.blundell.tut.LoaderImageView
 		   android:id="@+id/loaderImageView4"
 		   android:layout_width="180dp"
@@ -74,13 +148,31 @@
     <TableRow
         android:id="@+id/tableRow5"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
+        android:layout_height="80dp" >
 		
+        <RelativeLayout>
 		<TextView
             android:id="@+id/textView5"
             android:layout_width="300dp"
-            android:layout_height="80dp"
+            android:layout_height="20dp"
             android:text="Dialog: Talk about Internet of Things" />
+		<TextView
+            android:id="@+id/textView5.1"
+            android:layout_width="300dp"
+            android:layout_height="20dp"
+            android:layout_below="@+id/textView5"
+            android:text="* TEEC talk"
+            android:textAppearance="@style/BlueText" />
+
+        <TextView
+            android:id="@+id/textView5.2"
+            android:layout_width="300dp"
+            android:layout_height="20dp"
+            android:layout_below="@+id/textView5.1"
+            android:text="* April 10, 2014"
+            android:textAppearance="@style/RedText" />
+
+        </RelativeLayout>
 		<com.blundell.tut.LoaderImageView
 		   android:id="@+id/loaderImageView5"
 		   android:layout_width="180dp"
@@ -92,12 +184,31 @@
     <TableRow
         android:id="@+id/tableRow6"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
+        android:layout_height="20dp" >
+		
+        <RelativeLayout>
 		<TextView
             android:id="@+id/textView6"
             android:layout_width="300dp"
-            android:layout_height="80dp"
+            android:layout_height="20dp"
             android:text="Discussion: Lord of rings story" />
+		<TextView
+            android:id="@+id/textView6.1"
+            android:layout_width="300dp"
+            android:layout_height="20dp"
+            android:layout_below="@+id/textView6"
+            android:text="* Fremont Book Lover Club"
+            android:textAppearance="@style/BlueText" />
+
+        <TextView
+            android:id="@+id/textView6.2"
+            android:layout_width="300dp"
+            android:layout_height="20dp"
+            android:layout_below="@+id/textView6.1"
+            android:text="* March 8, 2014"
+            android:textAppearance="@style/RedText" />
+
+        </RelativeLayout>
 		<com.blundell.tut.LoaderImageView
 		   android:id="@+id/loaderImageView6"
 		   android:layout_width="180dp"
@@ -109,12 +220,31 @@
     <TableRow
         android:id="@+id/tableRow7"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
-				<TextView
+        android:layout_height="20dp" >
+		
+        <RelativeLayout>
+		<TextView
             android:id="@+id/textView7"
             android:layout_width="300dp"
-            android:layout_height="80dp"
+            android:layout_height="20dp"
             android:text="Discussion: Math 101" />
+		<TextView
+            android:id="@+id/textView7.1"
+            android:layout_width="300dp"
+            android:layout_height="20dp"
+            android:layout_below="@+id/textView7"
+            android:text="* Harker High Math Assoc."
+            android:textAppearance="@style/BlueText" />
+
+        <TextView
+            android:id="@+id/textView7.2"
+            android:layout_width="300dp"
+            android:layout_height="20dp"
+            android:layout_below="@+id/textView7.1"
+            android:text="* Feb 10, 2014"
+            android:textAppearance="@style/RedText" />
+
+        </RelativeLayout>
 		<com.blundell.tut.LoaderImageView
 		   android:id="@+id/loaderImageView7"
 		   android:layout_width="180dp"
@@ -126,12 +256,31 @@
     <TableRow
         android:id="@+id/tableRow8"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
+        android:layout_height="20dp" >
+		
+        <RelativeLayout>
 		<TextView
             android:id="@+id/textView8"
             android:layout_width="300dp"
-            android:layout_height="80dp"
+            android:layout_height="20dp"
             android:text="Discussion: Picasso's painting" />
+		<TextView
+            android:id="@+id/textView8.1"
+            android:layout_width="300dp"
+            android:layout_height="20dp"
+            android:layout_below="@+id/textView8"
+            android:text="* Art Lover San Jose"
+            android:textAppearance="@style/BlueText" />
+
+        <TextView
+            android:id="@+id/textView8.2"
+            android:layout_width="300dp"
+            android:layout_height="20dp"
+            android:layout_below="@+id/textView8.1"
+            android:text="* Jan 23, 2014"
+            android:textAppearance="@style/RedText" />
+
+        </RelativeLayout>
 		<com.blundell.tut.LoaderImageView
 		   android:id="@+id/loaderImageView8"
 		   android:layout_width="180dp"
