--- a/android-client/Vispar/res/layout/fragment_main.xml
+++ b/android-client/Vispar/res/layout/fragment_main.xml
@@ -3,8 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.vispar.MainActivity$PlaceholderFragment" >
 
@@ -19,7 +17,7 @@
         android:layout_below="@+id/Invite"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="86dp"
-        android:text="@string/view_past_sessions" />
+        android:text="@string/view_past_events" />
 
     <Button
         android:id="@+id/Room"
@@ -28,7 +26,7 @@
         android:layout_alignLeft="@+id/MyVideo"
         android:layout_alignRight="@+id/MyVideo"
         android:layout_centerVertical="true"
-        android:text="@string/start_session" />
+        android:text="@string/start_event" />
 
     <Button
         android:id="@+id/Invite"
@@ -38,6 +36,7 @@
         android:layout_alignLeft="@+id/MyVideo"
         android:layout_alignRight="@+id/Room"
         android:layout_marginBottom="36dp"
+        android:gravity="center_vertical|center_horizontal"
         android:text="@string/invite_friends" />
 
 </RelativeLayout>
