--- a/android-client/Vispar/res/values/styles.xml
+++ b/android-client/Vispar/res/values/styles.xml
@@ -16,5 +16,21 @@
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
-
+    
+    <!-- text font -->
+    <style name="CodeFont">
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">#FF00FF</item>
+        <item name="android:typeface">monospace</item>
+    </style>
+	<style name="GreenText">
+        <item name="android:textColor">#00FF00</item>
+    </style>
+	<style name="RedText">
+        <item name="android:textColor">#FF0000</item>
+    </style>    
+	<style name="BlueText">
+        <item name="android:textColor">#0000FF</item>
+    </style>
 </resources>
