--- a/android-client/Vispar/res/layout/fragment_schedule.xml
+++ b/android-client/Vispar/res/layout/fragment_schedule.xml
@@ -9,30 +9,30 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
      <Button
-        android:id="@+id/InviteSchedule"
+        android:id="@+id/InviteEvent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/ViewSchedule"
+        android:layout_below="@+id/ViewEvent"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="86dp"
         android:text="@string/invite_schedules" />
 
     <Button
-        android:id="@+id/StartSchedule"
+        android:id="@+id/StartEvent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/InviteSchedule"
-        android:layout_alignRight="@+id/InviteSchedule"
+        android:layout_alignLeft="@+id/InviteEvent"
+        android:layout_alignRight="@+id/InviteEvent"
         android:layout_centerVertical="true"
         android:text="@string/start_schedules" />
 
     <Button
-        android:id="@+id/ViewSchedule"
+        android:id="@+id/ViewEvent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/StartSchedule"
-        android:layout_alignLeft="@+id/InviteSchedule"
-        android:layout_alignRight="@+id/StartSchedule"
+        android:layout_above="@+id/StartEvent"
+        android:layout_alignLeft="@+id/InviteEvent"
+        android:layout_alignRight="@+id/StartEvent"
         android:layout_marginBottom="36dp"
         android:text="@string/view_schedules" />
 
